# covid_reminder_line_bot

./: .gitignore  LICENSE  README.md  daily_notification.py  main.py  pyproject.toml  requirements.txt
.github/: issue_template.md  pull_request_template.md
covid_data_getter/: __init__.py  main.py
db_connector/: __init__.py  add.py  add.py_  initializeFirebase.py  main.py  test.py
messages/: __init__.py  main.py
messages/templates/: flex_message.json  prefecture_row.json  reference_content.json
