[tool.poetry]
name = "covid_reminder_line_bot"
version = "0.1.0"
description = ""
authors = ["Futaba-Kosuke <k.futaba2828@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
