[tool.poetry]
name = "covid_reminder_line_bot"
version = "0.1.0"
description = ""
authors = ["Futaba-Kosuke <k.futaba2828@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.0"
uvicorn = "^0.14.0"
aiolinebot = "^0.4.1"
pandas = "^1.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
